...

"removeFromCart" = "Remove from cart";
"removeFromCartSuccess" = "Good was removed from cart";
"removeFromCartFailure" = "Good removing from cart failed. Plese, try later";

"cart" = "Cart";
"close" = "Close";
"cancel" = "Cancel";
// "success" = "Success";
// "failure" = "Failure";

// Refresh control

...
