...
            image: UIImage(systemName: "checkmark.seal"),
            style: .done,
            target: self,
            action: #selector(signIn)
        )
        // For use in UI tests.
        signInItem.accessibilityIdentifier = "signInBarButtonItem"
        navigationItem.rightBarButtonItems = [registerNewUserItem, signInItem]
    }

    private func addSubviews() {
        // Add an empty custom navigation bar before adding collection view to show collection view refresh control just above the cells but not in navigation bar.
        // let navigationBar = UINavigationBar()
...
